# service-agent_interaction-python

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.dev.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: test.yml
app/: dependencies.py  main.py
app/api/: __init__.py
app/api/v1/: examples.py  router.py
app/config/: __init__.py  cfg.py
app/core/: database.py  exceptions.py  logging.py  middleware.py
app/models/: __init__.py  responses.py
app/services/: README.md  __init__.py  base.py
app/utils/: helpers.py  security.py
tests/: conftest.py  test_main.py
tests/api/v1/: test_examples.py
tests/core/: test_database.py  test_logging.py
tests/services/: test_base.py
tests/utils/: test_helpers.py  test_security.py
